fix: use relative paths for assets so site works on GitHub Pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>website</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -62,7 +62,7 @@
     <div class="pics"> <!--container flexível para mostrar os integrantes em cards, com imagem + descrição-->
     <section id="integrantes">
         <h3>Kurt Cobain</h3>
-        <img src="/imagens/kurt_cobain.jpg" alt="Kurt Cobain">
+        <img src="imagens/kurt_cobain.jpg" alt="Kurt Cobain">
         <p>Kurt Cobain (1967-1994) foi cantor, guitarrista e compositor norte-americano,
              fundador da banda Nirvana e um dos maiores ícones do movimento grunge. Nascido em Aberdeen,
              Washington, mostrou interesse pela música desde cedo e, junto a Krist Novoselic e depois Dave Grohl,
@@ -78,7 +78,7 @@
 
     <section>
         <h3>Krist Novoselic</h3>
-        <img src="/imagens/krist_novoselic.jpg" alt="Krist Novoselic"> 
+        <img src="imagens/krist_novoselic.jpg" alt="Krist Novoselic"> 
         <p>Krist Novoselic (1965-) é um baixista, compositor e ativista político norte-americano,
             conhecido principalmente como cofundador da banda ao lado de Kurt Cobain em 1987.
             Nascido em Compton, Califórnia, e filho de imigrantes croatas, mudou-se ainda jovem para Aberdeen,
@@ -94,7 +94,7 @@
 
     <section>
         <h3>Dave Grohl</h3>
-        <img src="/imagens/dave_grohl.jpg" alt="Dave Grohl">
+        <img src="imagens/dave_grohl.jpg" alt="Dave Grohl">
         <p>Dave Grohl (1969-) é um músico, compositor e produtor norte-americano, conhecido por ter sido baterista do Nirvana e,
             posteriormente, fundador e vocalista da banda Foo Fighters. Nascido em Warren, Ohio,
             cresceu na Virgínia e começou a tocar bateria ainda adolescente, integrando a banda punk Scream antes de entrar
@@ -142,9 +142,9 @@
     <section id="multimidia">
         <h2>Come as you are - Nevermind (1991)</h2>
         <hr>
-        <video controls width="800" height="600" poster="/imagens/baby.jpeg">
-            <source src="/video/Nirvana - Come As You Are (Official Music Video).mp4" type="video/mp4">
-                 <track kind="subtitles" srclang="en-us" src="/video/Nirvana - Come As You Are.vtt"
+        <video controls width="800" height="600" poster="imagens/baby.jpeg">
+            <source src="video/Nirvana - Come As You Are (Official Music Video).mp4" type="video/mp4">
+                 <track kind="subtitles" srclang="en-us" src="video/Nirvana - Come As You Are.vtt"
                   label="captions en"> <!--music_captions (made by me)-->
         </video>
     </section>
@@ -246,7 +246,7 @@
         </ul>
         <p>&copy;2025 Nirvana - Todos os direitos reservados. </p>
     </footer>
-  <script src="/javascript/script.js"></script>
+    <script src="javascript/script.js"></script>
 </body>
 </html> 
 
